--- a/login.html
+++ b/login.html
@@ -14,9 +14,12 @@
     <div class="page-loader-spinner"></div>
   </div>
   <a href="index.html" class="back-home">← 返回首頁</a>
-  <button type="button" class="theme-toggle" id="theme-toggle" aria-label="切換深色/淺色模式" title="切換深色/淺色模式">
+  <button type="button" class="theme-toggle" id="theme-toggle" aria-label="切換深色/淺色模式" title="切換淺色 / 深色">
     <span class="theme-icon sun" aria-hidden="true">☀️</span>
     <span class="theme-icon moon" aria-hidden="true">🌙</span>
+  </button>
+  <button type="button" class="theme-color-toggle" id="theme-color-toggle" aria-label="切換顏色主題" title="切換顏色主題">
+    🎨
   </button>
   <div class="bg-pattern"></div>
   <div class="toast" id="toast" role="status" aria-live="polite"></div>
